--- a/theme.css
+++ b/theme.css
@@ -2,266 +2,243 @@
     font-family: 'Raleway', sans-serif;
     padding: 0;
     margin: 0;
-    background-color: #1d1d1d;
+    background-color: #1b1b1b;
     color: white;
-}
-
-a {
+  }
+  a {
     color: white;
-}
-
-.header {
-    font-size: 125%;
+  }
+  .header {
+    overflow: hidden;
+    font-size: 1.25em;
     color: white;
     text-align: left;
     width: 100%;
-    padding-left: 10px;
+    padding-left: 1em;
     height: 3em;
     position: fixed;
     display: grid;
-    grid-template-columns: 8fr 1fr 1fr;
+    grid-template-columns: 6fr 1fr 1fr;
     padding-top: 1em;
     padding-bottom: 1em;
-    z-index: 20;
-    background-color: #1d1d1d;
-}
-
-#intro h1 {
-    z-index: 20;
-    font-size: 63px;
+    z-index: 1;
+    background-color: #1b1b1b;
+  }
+  .header h1, .header h3 {
+    z-index: 3;
+  }
+  #intro h1 {
+    z-index: 2;
+    font-size: 6em;
     width: 100%;
-    background-image: url(data/images/intro-background.jpg);
     color: white;
-    height: 400px;
+    height: 5em;
     text-align: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 3em;
+    background-image: url(data/images/intro-background.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
-}
-
-#Who {
+  }
+  #Who {
     width: 100%;
-    display: grid;
-    grid-gap: 50px;
-    grid-template: 70px 30px 250px / repeat(3, 20%);
     justify-content: center;
     justify-items: center;
     align-content: center;
     align-items: center;
-}
-#Who card {
+    text-align: center;
+  }
+  #Who card {
+    min-width: 70px;
+    width: 33%;
+    display: inline-block;
     vertical-align: center;
     align-content: center;
-    text-align: center;
-}
-
-#Who card img {
-    width: 40%; 
-}
-
-#Who .pres {
-    grid-area: 1 / 1 / span 1 /span 3;
-}
-
-#Who .x {
-    grid-area: 2 / 1 / span 1 / span 3;
-}
-
-#Who .python {
-    grid-area: 3 / 1 / span 1 / span 1;
-}
-
-#Who .bots {
-    grid-area: 3 / 2 / span 1 / span 1;
-}
-
-#Who .frontend {
-    grid-area: 3 / 3 / span 1 / span 1;
-}
-
-.learning {
-    width: 100% - 20px;
-    grid-template-columns: 20% 4% 20% 20% 20% 4%;
-    grid-gap: 30px;
-    height: 300px;
-    margin: 200px 0px 200px 20px;
+  }
+  #Who card p{
+    margin: auto;
+    max-width: 300px;
+    min-width: 50px;
+    padding-top: 1em;
+  }
+  #Who card img {
+    width: 40%;
+  }
+  #Who h1, #Who h3 {
+    margin-top: 3%;
+    margin-bottom: 3%;
+  }
+  #Who .python {
+  }
+  #Who .bots {
+  }
+  #Who .frontend {
+  }
+  .learning {
+    padding-right: 0px;
+    overflow: hidden;
+    height: 2%;
+    width: 98%;
+    grid-template-columns: 20% 4% 60% 4%;
+    grid-gap: 1em;
+    height: 20em;
+    margin: 20em 0px 12em 1em;
     display: grid;
-}
-
-.learning h1 {
+  }
+  .learning h1 {
     grid-area: 1 / 1 / span 1 / span 1;
     margin: auto;
-}
-
-.fcurly {
-    font-size: 200px;
+  }
+  .learning h2 {
+    font-size: 12em;
+    margin: auto;
+  }
+  .learning h2 .fcurly {
     grid-area: 1 / 2 / span 1 / span 1;
-    margin: auto;
-}
-
-.scurly {
-    font-size: 200px;
-    grid-area: 1 / 6 / span 1 / span 1;
-    margin: auto;
-}
-
-.learning card {
-    width: 150px;
-    height: 150px;
+  }
+  .learning h2 .scurly {
+    grid-area: 1 / 4 / span 1 / span 1;
+  }
+  .learning card {
+    width: 10em;
+    height: 10em;
     text-align: center;
     margin: auto;
-    padding: auto;
-}
-
-.learning p {
-    margin-bottom: 0px;
-}
-
-
-.learning h3 {
+    display: inline-block;
+  }
+  .learning p {
+  }
+  .learning h3 {
     font-weight: bold;
-}
-
-.rs {
+  }
+  .learning .learn {
     grid-area: 1 / 3 / span 1 / span 1;
-}
-
-.rs h3 {
+    overflow: hidden;
+    justify-content: center;
+    justify-items: center;
+    align-content: center;
+    align-items: center;
+    text-align: center;
+    margin: auto;
+  }
+  .rs {
+  }
+  .rs h3 {
     background-position: center;
     height: 50%;
     width: 50%;
-    font-size: 30px;
-    background-color: #DF5859;
+    font-size: 2em;
+    background-color: #df5859;
     color: black;
     border-radius: 100%;
     margin: auto;
     line-height: 2.6;
-}
-
-.js {
-    grid-area: 1 / 4 / span 1 / span 1;
-}
-
-.js h3 {
+  }
+  .js {
+  }
+  .js h3 {
     background-position: center;
     height: 50%;
     width: 50%;
-    font-size: 30px;
+    font-size: 2em;
     background-color: yellow;
     color: black;
     border-radius: 100%;
     margin: auto;
     line-height: 2.6;
-}
-
-.go {    
-    grid-area: 1 / 5 / span 1 / span 1;
-    
-}
-
-.go h3 {
+  }
+  .go {
+  }
+  .go h3 {
     background-position: center;
     height: 50%;
     width: 50%;
-    font-size: 30px;
-    background-color: #79BBC2;
+    font-size: 2em;
+    background-color: #79bbc2;
     color: black;
     border-radius: 100%;
     margin: auto;
     line-height: 2.6;
-}
-
-#projects {
-    display: grid;
-    grid-template: 10% 30% 30% / 20% 20%;
-    justify-content: center;
-    justify-items: center;
+  }
+  #projects {
     text-align: center;
-    grid-gap: 30px;
-}
-
-#projects card {
+  }
+  #projects .pros {
+    flex-wrap: wrap;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    margin: 6em 15% 3em 15%;
+  }
+  #projects card {
+    min-width: 100px;
+    height: 23em;
+    margin-right: 1em;
+    margin-bottom: 2em;
+    display: inline-block;
     border-style: solid;
     border-color: white;
     border-width: 2px;
-    width: 100%;
-    height: 100%;
-}
-
-#projects h3 {
+  }
+  #projects h3 {
     padding-top: 3%;
     text-decoration: underline;
-}
-
-#projects p {
+  }
+  #projects p {
     padding-top: 1%;
     padding-bottom: 3%;
-}
-#projects h1 {
-    grid-area: 1 / 1 / span 1 / span 2;
-}
-
-#projects a {
-    width: 100%;
+  }
+  #projects h1 {
+  }
+  #projects a {
+    max-width: 180px;
+    display: inline-block;
     text-decoration: none;
-    display: flex;
-}
-
-#projects img {
+  }
+  #projects img {
+    margin-bottom: 0.75em;
     width: 100%;
     object-fit: cover;
-    max-height: 
-}
-
-.req {
-    grid-area: 2 / 1 / span 1 / span 1;
-}
-
-.rem {
-    grid-area: 2 / 2 / span 1 / span 1;
-}
-
-.site {
-    grid-area: 3 / 1 / span 1 / span 1;
-}
-
-.site h2 {
+  }
+  .req {
+  }
+  .rem {
+  }
+  .site {
+  }
+  .site h2 {
+    margin-bottom: 0.5em;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 2.5em;
     background-color: white;
     color: black;
     font-family: "Courier New", Courier, monospace;
     text-align: bottom center;
     padding-top: 40%;
     padding-bottom: 40%;
-}
-
-.git {
-    grid-area: 3 / 2 / span 1 / span 1;
-}
-
-footer {
-    margin-top: 250px;
-    margin-bottom: -100px;
+  }
+  .git {
+  }
+  footer {
+    margin-top: 13em;
+    margin-bottom: -6em;
     display: grid;
     grid-template: 70% / 60% 8% 8% 8% 8%;
     width: 100%;
+    overflow: hidden;
     grid-gap: 1%;
     justify-content: center;
     justify-items: center;
-}
-footer h2 {
+  }
+  footer h2 {
     line-height: 2em;
     height: 4em;
-    grid-area: 1 / 1 / span 1 / span 1;
-}
-
-footer img {
+    grid-area: 1 / span 1 / span 1;
+  }
+  footer img {
     width: 50%;
-    margin-right: 15px;
-    margin-left: 5px;
-    grid-area: 1 / 2 / span 1 / span 1;
-}
-
-
-
+    margin-right: 1em;
+    margin-left: 0.3em;
+    grid-area: 0.5 / span 1 / span 1;
+  }
+  
