--- a/theme.css
+++ b/theme.css
@@ -1,244 +1,212 @@
 * {
-    font-family: 'Raleway', sans-serif;
-    padding: 0;
-    margin: 0;
-    background-color: #1b1b1b;
-    color: white;
-  }
-  a {
-    color: white;
-  }
-  .header {
-    overflow: hidden;
-    font-size: 1.25em;
-    color: white;
-    text-align: left;
-    width: 100%;
-    padding-left: 1em;
-    height: 3em;
-    position: fixed;
-    display: grid;
-    grid-template-columns: 6fr 1fr 1fr;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    z-index: 1;
-    background-color: #1b1b1b;
-  }
-  .header h1, .header h3 {
-    z-index: 3;
-  }
-  #intro h1 {
-    z-index: 2;
-    font-size: 6em;
-    width: 100%;
-    color: white;
-    height: 5em;
-    text-align: center;
-    padding-top: 3em;
-    background-image: url(data/images/intro-background.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-  #Who {
-    width: 100%;
-    justify-content: center;
-    justify-items: center;
-    align-content: center;
-    align-items: center;
-    text-align: center;
-  }
-  #Who card {
-    min-width: 70px;
-    width: 33%;
-    display: inline-block;
-    vertical-align: center;
-    align-content: center;
-  }
-  #Who card p{
-    margin: auto;
-    max-width: 300px;
-    min-width: 50px;
-    padding-top: 1em;
-  }
-  #Who card img {
-    width: 40%;
-  }
-  #Who h1, #Who h3 {
-    margin-top: 3%;
-    margin-bottom: 3%;
-  }
-  #Who .python {
-  }
-  #Who .bots {
-  }
-  #Who .frontend {
-  }
-  .learning {
-    padding-right: 0px;
-    overflow: hidden;
-    height: 2%;
-    width: 98%;
-    grid-template-columns: 20% 4% 60% 4%;
-    grid-gap: 1em;
-    height: 20em;
-    margin: 20em 0px 12em 1em;
-    display: grid;
-  }
-  .learning h1 {
-    grid-area: 1 / 1 / span 1 / span 1;
-    margin: auto;
-  }
-  .learning h2 {
-    font-size: 12em;
-    margin: auto;
-  }
-  .learning h2 .fcurly {
-    grid-area: 1 / 2 / span 1 / span 1;
-  }
-  .learning h2 .scurly {
-    grid-area: 1 / 4 / span 1 / span 1;
-  }
-  .learning card {
-    width: 10em;
-    height: 10em;
-    text-align: center;
-    margin: auto;
-    display: inline-block;
-  }
-  .learning p {
-  }
-  .learning h3 {
-    font-weight: bold;
-  }
-  .learning .learn {
-    grid-area: 1 / 3 / span 1 / span 1;
-    overflow: hidden;
-    justify-content: center;
-    justify-items: center;
-    align-content: center;
-    align-items: center;
-    text-align: center;
-    margin: auto;
-  }
-  .rs {
-  }
-  .rs h3 {
-    background-position: center;
-    height: 50%;
-    width: 50%;
-    font-size: 2em;
-    background-color: #df5859;
-    color: black;
-    border-radius: 100%;
-    margin: auto;
-    line-height: 2.6;
-  }
-  .js {
-  }
-  .js h3 {
-    background-position: center;
-    height: 50%;
-    width: 50%;
-    font-size: 2em;
-    background-color: yellow;
-    color: black;
-    border-radius: 100%;
-    margin: auto;
-    line-height: 2.6;
-  }
-  .go {
-  }
-  .go h3 {
-    background-position: center;
-    height: 50%;
-    width: 50%;
-    font-size: 2em;
-    background-color: #79bbc2;
-    color: black;
-    border-radius: 100%;
-    margin: auto;
-    line-height: 2.6;
-  }
-  #projects {
-    text-align: center;
-  }
-  #projects .pros {
-    flex-wrap: wrap;
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    margin: 6em 15% 3em 15%;
-  }
-  #projects card {
-    min-width: 100px;
-    height: 23em;
-    margin-right: 1em;
-    margin-bottom: 2em;
-    display: inline-block;
-    border-style: solid;
-    border-color: white;
-    border-width: 2px;
-  }
-  #projects h3 {
-    padding-top: 3%;
-    text-decoration: underline;
-  }
-  #projects p {
-    padding-top: 1%;
-    padding-bottom: 3%;
-  }
-  #projects h1 {
-  }
-  #projects a {
-    max-width: 180px;
-    display: inline-block;
-    text-decoration: none;
-  }
-  #projects img {
-    margin-bottom: 0.75em;
-    width: 100%;
-    object-fit: cover;
-  }
-  .req {
-  }
-  .rem {
-  }
-  .site {
-  }
-  .site h2 {
-    margin-bottom: 0.5em;
-    font-weight: bold;
-    font-size: 2.5em;
-    background-color: white;
-    color: black;
-    font-family: "Courier New", Courier, monospace;
-    text-align: bottom center;
-    padding-top: 40%;
-    padding-bottom: 40%;
-  }
-  .git {
-  }
-  footer {
-    margin-top: 13em;
-    margin-bottom: -6em;
-    display: grid;
-    grid-template: 70% / 60% 8% 8% 8% 8%;
-    width: 100%;
-    overflow: hidden;
-    grid-gap: 1%;
-    justify-content: center;
-    justify-items: center;
-  }
-  footer h2 {
-    line-height: 2em;
-    height: 4em;
-    grid-area: 1 / span 1 / span 1;
-  }
-  footer img {
-    width: 50%;
-    margin-right: 1em;
-    margin-left: 0.3em;
-    grid-area: 0.5 / span 1 / span 1;
-  }
-  
+  font-family: 'Raleway', sans-serif;
+  padding: 0;
+  margin: 0;
+  background-color: #1b1b1b;
+  color: white;
+}
+a {
+  color: white;
+}
+.header {
+  overflow: hidden;
+  font-size: 1.25em;
+  color: white;
+  text-align: left;
+  width: 100%;
+  padding-left: 1em;
+  height: 3em;
+  position: fixed;
+  display: flex;
+  grid-template-columns: 6fr 1fr 1fr;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  z-index: 1;
+  background-color: #1b1b1b;
+}
+.header h1 {
+  flex-grow: 8;
+  z-index: 3;
+}
+.header h3 {
+  flex-grow: 1;
+}
+#intro h1 {
+  z-index: 2;
+  font-size: 6em;
+  width: 100%;
+  color: white;
+  height: 5em;
+  text-align: center;
+  padding-top: 3em;
+  background-image: url(data/images/intro-background.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+#Who {
+  width: 100%;
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
+  align-items: center;
+  text-align: center;
+}
+#Who h1, #Who h3 {
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+#Who card {
+  min-width: 70px;
+  width: 33%;
+  display: inline-block;
+  vertical-align: center;
+  align-content: center;
+}
+#Who card p {
+  margin: auto;
+  max-width: 300px;
+  min-width: 50px;
+  padding-top: 1em;
+}
+#Who card img {
+  width: 40%;
+}
+.learning {
+  padding-right: 0px;
+  overflow: hidden;
+  height: 2%;
+  width: 98%;
+  grid-template-columns: 20% 4% 60% 4%;
+  grid-gap: 1em;
+  height: 20em;
+  margin: 20em 0px 12em 1em;
+  display: grid;
+}
+.learning h1 {
+  grid-area: 1 / span 1 / span 1;
+  margin: auto;
+  font-size: 1.8em;
+}
+.learning h2 {
+  font-size: 12em;
+  margin: auto;
+}
+.learning h2 .fcurly {
+  grid-area: 0.5 / span 1 / span 1;
+}
+.learning h2 .scurly {
+  grid-area: 0.25 / span 1 / span 1;
+}
+.learning .learn {
+  grid-area: 0.33333 / span 1 / span 1;
+  overflow: hidden;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+}
+.learning card {
+  width: 10em;
+  height: 10em;
+  text-align: center;
+  margin: auto;
+  display: inline-block;
+}
+.learning h3 {
+  font-weight: bold;
+  background-position: center;
+  height: 50%;
+  width: 50%;
+  font-size: 2em;
+  color: black;
+  border-radius: 100%;
+  margin: auto;
+  line-height: 2.6;
+}
+.learning .rs {
+  background-color: #df5859;
+}
+.learning .js {
+  background-color: yellow;
+}
+.learning .go {
+  background-color: #79bbc2;
+}
+#projects {
+  text-align: center;
+}
+#projects>h1 {
+  font-size: 3em;
+}
+#projects .proj {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 6em 15% 3em 15%;
+}
+#projects card {
+  width: 18em;
+  height: 27em;
+  margin-right: 1em;
+  margin-bottom: 4em;
+  display: inline-block;
+  border-style: solid;
+  border-color: white;
+  border-width: 2px;
+}
+#projects h3 {
+  padding-top: 3%;
+  text-decoration: underline;
+}
+#projects p {
+  padding-top: 1%;
+  padding-bottom: 3%;
+}
+#projects a {
+  text-decoration: none;
+}
+#projects img {
+  margin-bottom: 0.75em;
+  width: 100%;
+  object-fit: cover;
+}
+#projects .site h2 {
+  margin-bottom: 0.5em;
+  font-weight: bold;
+  font-size: 2.5em;
+  background-color: white;
+  color: black;
+  font-family: "Courier New", Courier, monospace;
+  text-align: bottom center;
+  padding-top: 40%;
+  padding-bottom: 40%;
+}
+footer {
+  margin-top: 13em;
+  display: inline-flex;
+  width: 100%;
+  overflow: hidden;
+  justify-content: center;
+  align-content: space-between;
+}
+footer h2 {
+  line-height: 2em;
+  height: 4em;
+  flex-grow: 9;
+}
+footer img {
+  flex-grow: 1;
+  width: 3.75em;
+  margin-right: 1em;
+  margin-left: 0.3em;
+}
+.sign {
+  font-weight: thin;
+  font-size: 1em;
+  text-align: right;
+  margin-top: 6em;
+  margin-right: 1em;
+}
