--- a/theme.css
+++ b/theme.css
@@ -14,7 +14,7 @@ a {
   color: white;
   text-align: left;
   width: 100%;
-  height: 3em;
+  height: 7%;
   position: fixed;
   display: flex;
   padding-top: 1em;
@@ -140,8 +140,7 @@ a {
 #projects card {
   width: 18em;
   height: 27em;
-  margin-right: 1em;
-  margin-bottom: 4em;
+  margin: 0px 1em 4em 1em;
   display: inline-block;
   border-style: solid;
   border-color: white;
@@ -183,6 +182,7 @@ footer {
   flex-wrap: wrap;
 }
 footer h2 {
+  padding-left: 1%;
   line-height: 2em;
   height: 100%;
   flex-grow: 9;
@@ -202,8 +202,11 @@ footer img {
   margin-right: 1em;
 }
 @media only screen and (max-width: 900px) {
+  .header {
+    font-size: 1.1em;
+  }
   #intro h1 {
-    font-size: 2em;
+    font-size: 5em;
   }
   .learning h2 {
     display: none;
