--- a/theme.css
+++ b/theme.css
@@ -46,21 +46,29 @@ a {
   margin-top: 3em;
   width: 100%;
   justify-content: center;
-  justify-items: center;
   align-content: center;
   align-items: center;
   text-align: center;
 }
-#Who h1, #Who h3 {
-  margin-top: 3%;
-  margin-bottom: 3%;
+#Who h1, #Who h2 {
+  margin-top: 2em;
+  margin-bottom: 3em;
+}
+#Who .spells {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  justify-content: center;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 #Who card {
-  min-width: 70px;
   width: 30%;
   display: inline-block;
   vertical-align: center;
   align-content: center;
+  margin-bottom: 3em;
+
 }
 #Who card p {
   margin: auto;
@@ -207,6 +215,12 @@ footer img {
   }
   #intro h1 {
     font-size: 5em;
+  }
+  #Who card {
+    flex-basis: 100%;
+  }
+  #Who card p {
+    font-size: 0.8em;
   }
   .learning h2 {
     display: none;
