--- a/theme.css
+++ b/theme.css
@@ -2,7 +2,7 @@
   font-family: 'Raleway', sans-serif;
   padding: 0;
   margin: 0;
-  background-color: #1b1b1b;
+  background-color: #18181A;
   color: white;
 }
 a {
@@ -55,7 +55,7 @@ a {
   display: flex;
   padding-top: 1em;
   padding-bottom: 1em;
-  background-color: #1b1b1b;
+  background-color: #18181A;
   z-index: 2;
 }
 .header h1 {
