--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -34,6 +34,8 @@
   --color-text: var(--vt-c-text-light-1);
 
   --accent: #FE8529 ;
+  --accent-light: #ffb65a;
+  --accent-dark: #c55600;
 
   --section-gap: 160px;
 }
@@ -59,6 +61,12 @@
   margin: 0;
   position: relative;
   font-weight: normal;
+  
+}
+
+*::selection {
+  background-color: var(--accent-light);
+  color: var(--color-text);
 }
 
 body {
