--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -40,7 +40,7 @@
   --section-gap: 160px;
 }
 
-  /* @media (prefers-color-scheme: dark) {
+  @media (prefers-color-scheme: dark) {
     :root {
       --color-background: var(--vt-c-black);
       --color-background-soft: var(--vt-c-black-soft);
@@ -52,7 +52,7 @@
       --color-heading: var(--vt-c-text-dark-1);
       --color-text: var(--vt-c-text-dark-2);
     }
-  } */
+  }
 
 *,
 *::before,
@@ -70,7 +70,6 @@
 }
 
 body {
-  min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
@@ -81,5 +80,10 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+}
+
+body, #app {
+  /* scroll snapping */
+  height: 100vh;
+  overflow:hidden;
 }
