--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -20,43 +20,53 @@
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 
-  --accent: #FE8529 ;
-  --accent-light: #ffb65a;
-  --accent-dark: #c55600;
+  --main: #FE8529 ;
+  --main-light: #fe9a29;
+  --main-dark: #fe7029;
+
+  --complement: #29a2fe;
+
+  --triadic-plus: #29fe85;
+  --triadic-minus: #8529fe;
+
 }
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
+  --color-background: var(--vt-c-black);
+  --color-background-soft: var(--vt-c-black-soft);
+  --color-background-mute: var(--vt-c-black-mute);
 
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
+  --color-border: var(--vt-c-divider-dark-2);
+  --color-border-hover: var(--vt-c-divider-dark-1);
 
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
+  --color-heading: var(--vt-c-text-dark-1);
+  --color-text: var(--vt-c-text-dark-2);
 
-  --accent-2: var(--accent-dark);
+  --accent-2: var(--main-light);
+  --accent: var(--main);
 
   --section-gap: 160px;
+
 }
+  @media (prefers-color-scheme: light) {
 
-  /* @media (prefers-color-scheme: dark) {
     :root {
-      --color-background: var(--vt-c-black);
-      --color-background-soft: var(--vt-c-black-soft);
-      --color-background-mute: var(--vt-c-black-mute);
-
-      --color-border: var(--vt-c-divider-dark-2);
-      --color-border-hover: var(--vt-c-divider-dark-1);
-
-      --color-heading: var(--vt-c-text-dark-1);
-      --color-text: var(--vt-c-text-dark-2);
-
-      --accent-2: var(--accent-light);
+      --color-background: var(--vt-c-white);
+      --color-background-soft: var(--vt-c-white-soft);
+      --color-background-mute: var(--vt-c-white-mute);
+    
+      --color-border: var(--vt-c-divider-light-2);
+      --color-border-hover: var(--vt-c-divider-light-1);
+    
+      --color-heading: var(--vt-c-text-light-1);
+      --color-text: var(--vt-c-text-light-1);
+    
+      --accent-2: var(--main);
+      --accent: var(--main-dark);
     }
-  } */
+    
+  }
 
 *,
 *::before,
